<resources>
    <string name="app_name">GpsIndoorF</string>
    <string name="title_sync">Sync</string>
    <string name="title_database">Beacons</string>
    <string name="title_info">Info</string>
    <string name="title_add_location">Add Location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="info_title">Device Info</string>
    <string name="id_placeHolderDetails">ID:</string>
    <string name="name_placeHolderDetails">Name:</string>
    <string name="mac_placeHolderDetails">MAC:</string>
    <string name="rssi_placeHolderDetails">RSSI:</string>
    <string name="contextDescriptionFloatingButton">to_sync_data</string>
    <string name="placeHolder_label">Label:</string>
    <string name="placeHolder_divison">Divison:</string>
    <string name="placeHolder_place">Place:</string>
    <string name="title_graph">Graph</string>

    <!-- TODO: New Words -->
    <string name="button_run">Run</string>
    <string name="button_reset">Reset</string>
    <string name="button_undo">Undo</string>
    <string name="remove_node">Remove Node</string>
    <string name="button_redo">Redo</string>
    <string name="node">node</string>
    <string name="nodes">nodes</string>
    <string name="graph_information_total_of">Total</string>
    <string name="graph_information_is_not_connected">is not connected</string>
    <string name="graph_information_is_connected_to">is connected to</string>
    <string name="delete_graph">Delete graph</string>
    <string name="confirm_delete">Are you sure you want to delete the graph?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="tittle_share">Share</string>
    <string name="place_holder_qr_code">QR CODE</string>


</resources>