<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    card_view:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:id="@+id/tbRssi_placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp"
            android:text="@string/rssi_placeHolderDetails"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintVertical_bias="1.0" />


        <TextView
            android:id="@+id/tbID_placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="-32dp"
            android:layout_marginTop="0dp"
            android:textStyle="bold"
            android:text="@string/id_placeHolderDetails" />

        <TextView
            android:id="@+id/tvItemRssi"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginTop="28dp"
            android:layout_marginStart="24dp"
            android:textSize="14sp"
            tools:text="-100" />

        <TextView
            android:id="@+id/tvItemId"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="-40dp"
            android:textAlignment="center"
            android:textSize="14sp"
            tools:text="123" />

        <TextView
            android:id="@+id/tbName_placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="80dp"
            android:text="@string/name_placeHolderDetails"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            tools:text="Beacon 123" />

        <TextView
            android:id="@+id/tbMac_placeHolder"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="-160dp"
            android:layout_marginTop="28dp"
            android:text="@string/mac_placeHolderDetails"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvItemMac"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="28dp"
            android:textSize="14sp"
            tools:text="00:00:00:00" />

        <ImageView
            android:id="@+id/ivAddLoc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            card_view:srcCompat="@drawable/ic_baseline_add_location_24" />

    </LinearLayout>
</androidx.cardview.widget.CardView>