<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="400dp">


    <TextView
        android:id="@+id/tbID_placeHolder"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:text="@string/id_placeHolderDetails"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvItemId"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="44dp"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbID_placeHolder"
        app:layout_constraintStart_toEndOf="@+id/tbID_placeHolder"
        app:layout_constraintTop_toTopOf="@+id/tbID_placeHolder"
        app:layout_constraintVertical_bias="0.0"
        tools:text="123" />

    <TextView
        android:id="@+id/tbName_placeHolder"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="100dp"
        android:text="@string/name_placeHolderDetails"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemId"
        app:layout_constraintStart_toEndOf="@+id/tvItemId"
        app:layout_constraintTop_toTopOf="@+id/tvItemId"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tvItemName"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbName_placeHolder"
        app:layout_constraintStart_toEndOf="@+id/tbName_placeHolder"
        app:layout_constraintTop_toTopOf="@+id/tbName_placeHolder"
        app:layout_constraintVertical_bias="0.0"
        tools:text="Beacon 123" />

    <TextView
        android:id="@+id/tbMac_placeHolder"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/mac_placeHolderDetails"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tbID_placeHolder"
        app:layout_constraintTop_toBottomOf="@+id/tbID_placeHolder" />

    <TextView
        android:id="@+id/tvItemMac"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="28dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbMac_placeHolder"
        app:layout_constraintStart_toEndOf="@+id/tbMac_placeHolder"
        app:layout_constraintTop_toTopOf="@+id/tbMac_placeHolder"
        app:layout_constraintVertical_bias="0.0"
        tools:text="00:00:00:00" />

    <TextView
        android:id="@+id/tbRssi_placeHolder"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="48dp"
        android:text="@string/rssin_placeHolderDetails"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvItemMac"
        app:layout_constraintStart_toEndOf="@+id/tvItemMac"
        app:layout_constraintTop_toTopOf="@+id/tvItemMac"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvItemRssi"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginStart="36dp"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/tbRssi_placeHolder"
        app:layout_constraintStart_toEndOf="@+id/tbRssi_placeHolder"
        app:layout_constraintTop_toTopOf="@+id/tbRssi_placeHolder"
        app:layout_constraintVertical_bias="0.0"
        tools:text="-100" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="198dp"
        android:layout_height="104dp"
        android:layout_marginTop="168dp"
        android:text="Wokr todo !!!"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>
